# EMAIL_MCP

./: .gitignore  README.md  config.json  config.py  email_client.py  pyproject.toml  server.py
