[project]
name = "email-mcp"
version = "0.1.0"
description = "Email MCP Server — list, read, send, reply, and manage email via IMAP/SMTP"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
email-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
